# learning-wgpu

./: Cargo.toml  README.md
src/: buffer.rs  camera.rs  camera_controller.rs  camera_uniform.rs  game.rs  instance.rs  instance_raw.rs  main.rs  shader.wgsl  state.rs  texture.rs
src/shaders/: shader.wgsl
