[package]
name = "learning_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
tracing = "*"
tracing-subscriber = "*"
wgpu = "*"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ] }
image = { version = "*", features = ["png", "jpeg"] }
anyhow = "*"
paste = "*"
cgmath = "*"
